Fixed h2 title text aligns in css and changed all titles to be nested in same div classes in index.html

--- a/index.html
+++ b/index.html
@@ -117,7 +117,10 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h2>Testimonials</h2>
+				<h2>Our Testimonials</h2>
+			</div>
+			<div class="col-md-12 col-sm-12">
+				
 				<link href="//netdna.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
 				<script src="//netdna.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 				<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -145,13 +148,12 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<h2>BlaBla Story</h2>
+				<h2>About Us</h2>
 			</div>
 			<div class="col-md-6 col-sm-6">
 				<img src="images/about-img.jpg" class="img-responsive" alt="about img">
 			</div>
 			<div class="col-md-6 col-sm-6">
-				<h3>ABOUT US</h3>
 				<h4>Amazing Programs &amp; Teachers</h4>
 				<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet.</p>
 				<p>Dolore magna aliquam erat volutpat. Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet. Dolore magna aliquam erat volutpat.</p>
@@ -176,9 +178,9 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12 col-sm-12">
-				<div class="title">
-					<h2>Our Portfolio</h2>
-				</div>
+				<h2>Our Portfolio</h2>
+			</div>
+			<div class="col-md-12 col-sm-12">
 				<!-- ISO section -->
 				<div class="iso-section">
                		<div class="iso-box-section">
