Additional sections and content

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Homepage - Semantic</title>
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/reset.css">
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/site.css">
+    <link rel="stylesheet" type="text/css" href="semantic/dist/components/form.css">
 
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/container.css">
     <link rel="stylesheet" type="text/css" href="semantic/dist/components/grid.css">
@@ -32,6 +33,7 @@
     <script src="semantic/dist/components/visibility.js"></script>
     <script src="semantic/dist/components/sidebar.js"></script>
     <script src="semantic/dist/components/transition.js"></script>
+    <script src="semantic/dist/components/form.js"></script>
     <script src="https://canvasjs.com/assets/script/jquery.canvasjs.min.js"></script>
     <script>
         $(document).ready(function () {
@@ -95,11 +97,11 @@
 <!-- Following Menu -->
 <div class="ui large top inverted menu dark-blue">
     <div class="ui container">
-        <a class="active item">Angol Spanyol Nyelvoktatás</a>
-        <a class="item">Céges tanfolyamok</a>
-        <a class="item">Magánórák</a>
-        <a class="item">Rólam</a>
-        <a class="item">Kapcsolat</a>
+        <a class="item" href="#training-slides">Céges tanfolyamok</a>
+        <a class="item" href="#private-classes">Magánórák</a>
+        <a class="item" href="#about-me">Rólam</a>
+        <a class="item" href="#proposal">Ajánlatkérő</a>
+        <a class="item" href="#contact">Kapcsolat</a>
     </div>
 </div>
 
@@ -109,17 +111,17 @@
     <div class="ui inverted vertical masthead center aligned segment" id="header-slide">
         <div class="dark-blue" id="header-wrapper">
             <h1>
-                Spanyol és angol nyelvórák
+                Angol és spanyol nyelvtanfolyamok
             </h1>
             <h2>Egyéni és kiscsoportos vállalati tanfolyamok,<br/> magánórák.</h2>
-            <a class="ui huge inverted neon-green button" href="#welcome-section">Részletek<i class="right arrow icon"></i></a>
+            <a class="ui huge inverted neon-green button" href="#training-slides">Részletek<i class="right arrow icon"></i></a>
         </div>
     </div>
     <div class="ui vertical stripe segment" id="welcome-section">
         <div class="ui middle aligned stackable grid container">
             <div class="row">
                 <div class="eight wide column italic-conversational">
-                    <h3 class="ui dark-blue header">Hatékony, kiscsoportos angol és spanyol tréningek az Ön cégénél.</h3>
+                    <h3 class="ui dark-blue header">Hatékony, kiscsoportos angol és spanyol tanfolyamok az Ön cégénél.</h3>
                     <p><i>Üdvözlöm a honlapomon! Kedves Érdeklődő!</i></p>
                     <p><i>
                         Szeretné, ha munkatársai megállnák a helyüket angol nyelven történő tárgyalásokon? Fontos, hogy
@@ -135,7 +137,8 @@
             </div>
         </div>
     </div>
-    <div class="ui vertical stripe inverted segment">
+
+    <div class="ui vertical stripe inverted segment" id="training-slides">
         <h2 class="ui white header center aligned huge">
             Vállalati tanfolyamok, tréningek angol és spanyol nyelven
         </h2>
@@ -147,12 +150,12 @@
             <div class="center aligned row">
                 <div class="column">
                     <h3 class="ui light-blue header">Kommunikációs tanfolyamok (Kiscsoportos 2-6 fő)</h3>
-                    <h3 class="ui neon-green header">Egyéni, one-on-one tanfolyamok</h3>
-                    <p><b class="light-blue">Kiknek ajánlom?</b><br/>Középfok körüli szinttől (B1+) - felsőfokig (C1)</p>
-                    <p><b class="light-blue">Milyen hosszú egy tanóra?</b><br/>Egy alkalom 90 percből áll, ami két 45 perces
+                    <h3 class="ui light-blue header">Egyéni, one-on-one tanfolyamok</h3>
+                    <p><b class="neon-green">Kiknek ajánlom?</b><br/>Középfok körüli szinttől (B1+) - felsőfokig (C1)</p>
+                    <p><b class="neon-green">Milyen hosszú egy tanóra?</b><br/>Egy alkalom 90 percből áll, ami két 45 perces
                         órának felel
                         meg.</p>
-                    <p><b class="light-blue">Mire kerül sor a tanfolyamon?</b><br>A tananyagot minden esetben az egyéni igények
+                    <p><b class="neon-green">Mire kerül sor a tanfolyamon?</b><br>A tananyagot minden esetben az egyéni igények
                         figyelembe
                         vételével állítom össze.</p>
                 </div>
@@ -163,13 +166,26 @@
         </div>
     </div>
 
-    <div class="ui vertical stripe segment dark-blue">
+    <div class="ui vertical stripe segment dark-blue" id="about-me">
+        <div class="ui middle aligned stackable grid container">
+            <div class="row">
+                <div class="eight wide column italic-conversational">
+                    <h2>ABOUT ME</h2>
+                </div>
+                <div class="six wide right floated column">
+                    <img src="images/andras_veres.jpg" class="ui large bordered rounded image" alt="András Veres">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="ui vertical inverted segment">
         <div class="ui middle aligned stackable grid container">
             <div class=" row">
                 <div class="seven wide column">
                     <h4 class="ui white mini-header header">Tapasztalataim szerint a következő tevékenységekre van igény a tanfolyam keretein belül</h4>
                     <div class="ui bulleted list white">
-                        <div class="item">angolul zajló kommunikáció fejlesztésére, legyen szó üzleti vagy általános angol nyelvről.</div>
+                        <div class="item">angolul és spanyolul zajló kommunikáció fejlesztésére, legyen szó üzleti vagy általános angol és spanyol nyelvről.</div>
                         <div class="item">on-the-job segítség nyújtására, amely magában foglalja tárgyalások és meetingek szimulációját, beszámolók és e-mailek megfogalmazását és prezentációk összeállítását.</div>
                         <div class="item">nyelvtani rendszerezésre és gyakorlásra.</div>
                         <div class="item">írott és hallott szöveg értésének fejlesztésére.</div>
@@ -190,30 +206,63 @@
         </div>
     </div>
 
+    <div class="ui vertical stripe inverted segment dark-blue" id="proposal">
+        <div class="ui middle aligned stackable grid container">
+            <div class=" row">
+                <div class="seven wide column">
+                    <h4 class="ui white mini-header header">Az ajánlatkérés menete</h4>
+                    <p>Információ amit az ajánlatkérésről tudni kell.</p>
+                </div>
+                <div class="seven wide column">
+                    <form class="ui large inverted form">
+                      <div class="field">
+                        <label>Név</label>
+                        <input type="text" name="name" placeholder="Name">
+                      </div>
+                      <div class="field">
+                        <label>Telefonszám</label>
+                        <input type="text" name="phonenumber" placeholder="Phonenumber">
+                      </div>
+                      <div class="field">
+                        <label>Email cím</label>
+                        <input type="email" name="email" placeholder="Email">
+                      </div>
+                      <div class="field">
+                        <label>Tanfolyam típus</label>
+                        <select class="ui search dropdown">
+                            <option value="WF">Magán óra</option>
+                            <option value="WF">Céges</option>
+                            <option value="WF">Kis tanfolyam</option>
+                            <option value="WF">Nagy tanfolyam</option>
+                        </select>
+                      </div>
+                      <div class="field">
+                        <div class="ui checkbox">
+                          <input type="checkbox" tabindex="0" class="hidden">
+                          <label>I agree to the Terms and Conditions</label>
+                        </div>
+                      </div>
+                      <button class="ui button" type="submit">Submit</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 
-    <div class="ui inverted vertical footer segment">
+    <div class="ui inverted vertical footer segment" id="contact">
         <div class="ui container">
             <div class="ui stackable inverted divided equal height stackable grid">
                 <div class="three wide column">
                     <h4 class="ui inverted header">About</h4>
                     <div class="ui inverted link list">
-                        <a href="#" class="item">Sitemap</a>
-                        <a href="#" class="item">Contact Us</a>
-                        <a href="#" class="item">Religious Ceremonies</a>
-                        <a href="#" class="item">Gazebo Plans</a>
+                        <a class="item" href="#training-slides">Céges tanfolyamok</a>
+                        <a class="item" href="#private-classes">Magánórák</a>
+                        <a class="item" href="#about-me">Rólam</a>
+                        <a class="item" href="#proposal">Ajánlatkérő</a>
                     </div>
                 </div>
-                <div class="three wide column">
-                    <h4 class="ui inverted header">Services</h4>
-                    <div class="ui inverted link list">
-                        <a href="#" class="item">Banana Pre-Order</a>
-                        <a href="#" class="item">DNA FAQ</a>
-                        <a href="#" class="item">How To Access</a>
-                        <a href="#" class="item">Favorite X-Men</a>
-                    </div>
-                </div>
-                <div class="seven wide column">
-                    <h4 class="ui inverted header">Footer Header</h4>
+                <div class="ten wide column">
+                    <h4 class="ui inverted header">Kapcsolat</h4>
                     <p>Extra space for a call to action inside the footer that could help re-engage users.</p>
                 </div>
             </div>
